# marionette

./: .gitignore  README.md
marionette_app/: Cargo.toml  directory.json
marionette_app/src/: main.rs  msgbox.rs  page_not_found.rs  plugin.rs  selector_service.rs  states.rs  tool.rs  welcome.rs
marionette_app/src/resources/scripts/: interop.js  interop_connector.js  welcome.js
marionette_app/src/resources/scripts/tool/: canvas.js  tool.js  toolbar.js  widget.js
marionette_app/src/resources/scripts/tool/graphing/: box_renderer.js  data_provider.js  graph.js  graph_edge.js  graph_node.js  graph_vertex.js  renderer.js
marionette_app/src/resources/scripts/tool/rendering/: box_renderer.js  line.js  renderer.js  text.js
marionette_app/src/resources/scripts/tool/widgets/: clock.js  graph.js  log.js  text_editor.js
marionette_app/src/resources/styles/: analysis-selector.css  msgbox.css  page-not-found.css  tool.css  welcome-style.css
marionette_app/src/resources/styles/analysis-selector/: analysis-selector.css
marionette_app/src/resources/styles/misc/: file-icons.min.css
marionette_app/src/resources/styles/msgbox/: msgbox.css
marionette_app/src/resources/styles/tool/: tool.css  widget.css
marionette_app/src/resources/styles/tool/widgets/: clock.css  graph.css  log.css  text_editor.css
marionette_app/src/resources/styles/welcome/: welcome.css
marionette_app/src/resources/tests/: graph_test.json
marionette_app/src/states/: explorer.rs  selector.rs
marionette_core/: Cargo.toml  build.rs
marionette_core/notes/: arch.adoc
marionette_core/src/: assembly.rs  boxer.rs  byte_stream.rs  cfg.rs  db_controller.rs  disassembler.rs  exported_types.rs  general_lexer.rs  lexer_service.rs  lib.rs  lua_lexer.rs  mproj.rs  plugin.rs  python_lexer.rs  textualizer.rs
marionette_core/src/boxer/: dispute_resolver.rs  grid.rs
marionette_core/src/boxer/dispute_resolver/: dispute_rule.rs
marionette_core/src/boxer/grid/: grid_converter.rs
marionette_core/src/byte_stream/: natives.rs  templated.rs
marionette_core/src/cfg/: block.rs
marionette_core/src/disassembler/: interface.rs
marionette_core/src/mproj/: reader.rs  upgrader.rs  writer.rs
marionette_core/src/plugin/: comm.rs  interface.rs
marionette_core/src/structure/: region.rs
marionette_lua/: Cargo.toml
marionette_lua/src/: cfg.rs  configuration.rs  interface.rs  lexer.rs  lib.rs  lua_binary.rs  main.rs
marionette_lua/src/testing/lexer/: comments.lua  keywords.lua  numbers.lua  strings.lua  symbols.lua
marionette_util/: Cargo.toml
marionette_util/src/: lexer_service.rs  lib.rs
marionette_util/src/lexer_service/: lexers.rs
