[package]
name = "marionette_lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "marionette_lua"
crate_type = ["dylib"]

[dependencies]
bincode = "2.0.0-rc.3"
marionette_core = { path = "../marionette_core" }