[package]
name = "marionette_lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "marionette_lua"
crate_type = ["dylib"]

[dependencies]
bincode = "2.0.0-rc.3"
log = "0.4.18"
sensible-env-logger = "0.3.2"
marionette_core = { path = "../marionette_core" }